#12115 - fixed dropdown hover flickering

--- a/components/dropdown/style/index.less
+++ b/components/dropdown/style/index.less
@@ -55,6 +55,7 @@
     border-radius: @border-radius-base;
     box-shadow: @box-shadow-base;
     background-clip: padding-box;
+    -webkit-transform: translate3d(0, 0, 0);
 
     &-item-group-title {
       color: @text-color-secondary;
